# swarm-runtime

./: CLAUDE.md  README.md
crates/af-inference-client/: Cargo.toml  build.rs
crates/af-inference-client/proto/: common.proto  inference.proto
crates/af-inference-client/src/: budget.rs  client.rs  lib.rs  metrics.rs  namespace.rs
crates/af-swarm-runtime/: Cargo.toml
crates/af-swarm-runtime/src/: agent.rs
crates/af-swarm-state/: Cargo.toml  build.rs
crates/af-swarm-state/proto/: agent_state.proto  checkpoint.proto  common.proto  conversation.proto  encryption.proto  tool_call_log.proto  working_memory.proto
crates/af-swarm-state/src/: encryption.rs  error.rs  freeze.rs  gc.rs  hydrate.rs  lance_schema.rs  lib.rs  migrations.rs  store.rs
docs/architecture/: implementation-kickoff-plan.md  rust-swarm-runtime.md  rust-workspace-plan.md  testing-framework.md
docs/architecture/design/: dapr-deployment.md  inference-cluster.md  integration-contract.md  rust-runtime-internals.md  state-schema.md  test-benchmark-plan.md
docs/infrastructure/: substrate-phase-a-capacity-planning.md
infrastructure/akash/: swarm-runtime.sdl
infrastructure/k8s/swarm-runtime/: components.yaml  dapr-config.yaml  deployment.yaml  keda.yaml  namespace.yaml  network-policy.yaml  redis.yaml  secrets.yaml.template  surrealdb-l2.yaml
proto/af-swarm/: a2a_gateway.proto  buf.yaml  common.proto  orchestrator_agent.proto  runtime_dapr.proto  runtime_inference.proto
