[package]
name = "af-inference-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client for the AF shared inference cluster (Ray Serve / vLLM / SGLang)"
# Issue: alternatefutures/admin#132

[dependencies]
# gRPC / protobuf
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"

# Async runtime (matches workspace — tokio from rust-swarm-runtime.md §Tech_Stack)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Utilities
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "5"
thiserror = "1"
tracing = "0.1"

# Metrics (prometheus labels defined in design §9)
prometheus = { version = "0.13", features = ["process"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"

# NOTE: pin tonic version — pre-1.0 API surface may shift (per rust-swarm-runtime.md §Tech_Stack Rig warning pattern)
# Review at each minor bump before upgrading.
